examples/test/testpolicy7506.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7506
  namespace: namespace211
spec:
  podSelector:
    matchLabels:
      key38: value42
      key9: value15
      key28: value38
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key3: value7
          key24: value40
      podSelector:
        matchLabels:
          key17: value26
          key47: value25
